[fix]修复状态栏、音乐模块等bug

--- a/chat/src/main/res/layout/activity_main_container.xml
+++ b/chat/src/main/res/layout/activity_main_container.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.chat.view.ContentView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.example.chat.view.ContentView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/custom_color_app_bg"
@@ -18,18 +17,19 @@
         android:text="网络连接失败,请检查网络配置"
         android:textColor="@color/base_color_text_white"
         android:textSize="18sp"
-        android:visibility="gone"/>
+        android:visibility="gone" />
+
     <FrameLayout
         android:id="@+id/fl_content_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/tv_main_net"
-    />
+        android:layout_below="@+id/tv_main_net" />
+
     <ImageView
         android:id="@+id/iv_main_bg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:alpha="0"
         android:scaleType="fitXY"
-        android:src="@drawable/sidebar_bg_black"/>
+        android:src="@drawable/sidebar_bg_black" />
 </com.example.chat.view.ContentView>
