--- a/app/src/main/res/layout/activity_splash_main.xml
+++ b/app/src/main/res/layout/activity_splash_main.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_container_bg_03">
-
+    android:background="@color/black">
     <TextView
         android:id="@+id/tv_activity_splash_main_title"
         android:layout_centerHorizontal="true"
@@ -24,7 +23,7 @@
         android:layout_marginRight="5dp"
         android:layout_marginTop="20dp"
         android:text="3"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="18sp" />
 
 
