--- a/chat/src/main/res/layout/activity_login.xml
+++ b/chat/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:layout_marginLeft="-50dp"
         android:layout_marginRight="-300dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/de_bg"/>
+        android:background="@color/white"/>
 
     <TextView
         android:layout_width="wrap_content"
