--- a/commonlibrary/src/main/res/layout/content_layout_ll.xml
+++ b/commonlibrary/src/main/res/layout/content_layout_ll.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:tag="skin"
+    app:applySkin="true"
     android:background="@color/custom_color_app_bg"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
