--- a/chat/src/main/res/layout/activity_comment_list.xml
+++ b/chat/src/main/res/layout/activity_comment_list.xml
@@ -1,29 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/chat_bg"
     android:orientation="vertical">
 
     <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/refresh_activity_comment_list_refresh"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:id="@+id/refresh_activity_comment_list_refresh">
+        android:layout_weight="1">
+
         <com.example.commonlibrary.baseadapter.SuperRecyclerView
+            android:id="@+id/srcv_activity_comment_list_display"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/srcv_activity_comment_list_display"/>
+            android:layout_height="match_parent" />
     </android.support.v4.widget.SwipeRefreshLayout>
-    <include layout="@layout/view_activity_comment_list_bottom"/>
 
-
-
-
-
-
-
-
-
-
+    <include layout="@layout/view_activity_comment_list_bottom" />
 </LinearLayout>
