--- a/chat/src/main/res/layout/activity_photo_preview.xml
+++ b/chat/src/main/res/layout/activity_photo_preview.xml
@@ -11,6 +11,7 @@
 
 
     <RelativeLayout
+        android:layout_marginTop="10dp"
         android:id="@+id/rl_activity_photo_preview_top_container"
         android:layout_width="match_parent"
         android:layout_height="50dp">
