--- a/chat/src/main/res/layout/activity_register.xml
+++ b/chat/src/main/res/layout/activity_register.xml
@@ -10,7 +10,7 @@
         android:layout_marginLeft="-50dp"
         android:layout_marginRight="-300dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/de_bg"/>
+        android:src="@mipmap/de_bg"/>
 
 
     <LinearLayout
