--- a/chat/src/main/res/layout/activity_splash.xml
+++ b/chat/src/main/res/layout/activity_splash.xml
@@ -7,7 +7,7 @@
         android:scaleType="centerCrop"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/de_bg"/>
+        android:src="@mipmap/de_bg"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
