--- a/video/src/main/res/layout/fragment_qq_video_list.xml
+++ b/video/src/main/res/layout/fragment_qq_video_list.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <com.example.commonlibrary.cusotomview.swipe.CustomSwipeRefreshLayout
+        android:id="@+id/refresh_fragment_qq_video_list_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/refresh_fragment_qq_video_list_refresh">
+        android:layout_height="match_parent">
 
         <com.example.commonlibrary.baseadapter.SuperRecyclerView
+            android:id="@+id/srcv_fragment_qq_video_list_display"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/srcv_fragment_qq_video_list_display"/>
+            android:layout_height="match_parent" />
     </com.example.commonlibrary.cusotomview.swipe.CustomSwipeRefreshLayout>
 
 
