--- a/video/src/main/res/layout/item_fragment_hot_video_list.xml
+++ b/video/src/main/res/layout/item_fragment_hot_video_list.xml
@@ -11,7 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:padding="5dp"
+        android:paddingLeft="8dp"
+        android:paddingTop="3dp"
+        android:paddingRight="8dp"
+        android:paddingBottom="3dp"
         android:text="1"
         android:textColor="@color/grey_500"
         android:textSize="16sp" />
