--- a/video/src/main/res/layout/fragment_search_video_detail.xml
+++ b/video/src/main/res/layout/fragment_search_video_detail.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <com.example.commonlibrary.cusotomview.swipe.CustomSwipeRefreshLayout
+        android:id="@+id/refresh_fragment_search_video_detail_refresh"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/refresh_fragment_search_video_detail_refresh">
+        android:layout_height="wrap_content">
 
         <com.example.commonlibrary.baseadapter.SuperRecyclerView
             android:id="@+id/srcv_fragment_search_video_detail_display"
