--- a/commonlibrary/src/main/res/layout/view_video_control.xml
+++ b/commonlibrary/src/main/res/layout/view_video_control.xml
@@ -159,7 +159,7 @@
         android:background="@android:color/black"
         android:gravity="center"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <TextView
             android:layout_width="wrap_content"
@@ -168,19 +168,41 @@
             android:textColor="@android:color/white"
             android:textSize="13sp" />
 
-        <TextView
-            android:id="@+id/tv_view_video_control_error_retry"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:background="@drawable/bg_retry"
-            android:paddingLeft="12dp"
-            android:paddingTop="4dp"
-            android:paddingRight="12dp"
-            android:paddingBottom="5dp"
-            android:text="点击重试"
-            android:textColor="@android:color/white"
-            android:textSize="13sp" />
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_view_video_control_error_retry"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_retry"
+                android:paddingLeft="12dp"
+                android:paddingTop="4dp"
+                android:paddingRight="12dp"
+                android:paddingBottom="5dp"
+                android:text="点击重试"
+                android:textColor="@android:color/white"
+                android:textSize="13sp" />
+
+            <TextView
+                android:id="@+id/tv_view_video_control_error_switch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/bg_retry"
+                android:paddingLeft="12dp"
+                android:paddingTop="4dp"
+                android:paddingRight="12dp"
+                android:paddingBottom="5dp"
+                android:text="切换线路"
+                android:textColor="@android:color/white"
+                android:textSize="13sp" />
+        </LinearLayout>
+
     </LinearLayout>
     <!--顶部控制区-->
     <LinearLayout
