--- a/video/src/main/res/layout/activity_qq_video_detail.xml
+++ b/video/src/main/res/layout/activity_qq_video_detail.xml
@@ -34,7 +34,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
 
                 <View
                     android:layout_width="0dp"
@@ -45,7 +46,6 @@
                     android:id="@+id/tv_activity_qq_video_detail_score"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="7.9"
                     android:textColor="@color/red_500"
                     android:textSize="12sp" />
             </LinearLayout>
@@ -54,6 +54,13 @@
             <TextView
                 android:id="@+id/tv_activity_qq_video_detail_sub_title"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp" />
+
+
+            <com.example.commonlibrary.baseadapter.SuperRecyclerView
+                android:id="@+id/srcv_activity_qq_video_detail_sub_title"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp" />
 
@@ -69,8 +76,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="标签"
-                    android:textColor="@color/grey_500"
-                    android:textSize="12sp" />
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
 
                 <com.example.commonlibrary.baseadapter.SuperRecyclerView
                     android:id="@+id/srcv_activity_qq_video_detail_tag"
@@ -79,29 +87,6 @@
                     android:layout_marginLeft="5dp" />
             </LinearLayout>
 
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal">
-
-                <TextView
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="简介"
-                    android:textSize="12sp" />
-
-                <TextView
-                    android:id="@+id/tv_activity_qq_video_detail_desc"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp" />
-
-            </LinearLayout>
-
-
             <com.example.commonlibrary.baseadapter.SuperRecyclerView
                 android:id="@+id/srcv_activity_qq_video_detail_person"
                 android:layout_width="wrap_content"
@@ -109,12 +94,42 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp" />
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="简介"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tv_activity_qq_video_detail_desc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:lineSpacingExtra="10dp"
+                    android:textColor="@color/grey_500" />
+
+            </LinearLayout>
+
 
             <com.example.commonlibrary.baseadapter.SuperRecyclerView
                 android:id="@+id/srcv_activity_qq_video_detail_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp" />
+
+
+            <com.example.commonlibrary.baseadapter.SuperRecyclerView
+                android:id="@+id/srcv_activity_qq_video_detail_variety"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
 
         </LinearLayout>
